tests/cases/should_fail/types/empty_type_args.hash
// run=fail, stage=parse

a<> := b + 2;
