tests/cases/should_fail/types/empty_type_args.stderr
error: expected an expression, however received a `>`
 --> $DIR/empty_type_args.hash:1:3
1 |   a<> := b + 2;
  |     ^ here
